--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
+    "react-preloaders": "^3.0.3",
     "react-scripts": "4.0.0",
     "react-typist": "^2.0.5",
     "web-vitals": "^0.2.4"
